--- a/data/sources/ruby-praha.yaml
+++ b/data/sources/ruby-praha.yaml
@@ -8329,3 +8329,24 @@ series:
         url: https://www.meetup.com/praguerb/events/286613627/
         dtstart: 2022-07-06 19:00:00+02:00
         dtend: 2022-07-06 22:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Dec 7, 7:00 PM  CET: '
+      og_title: First Wednesday Of The Month - Ruby, Wed, Dec 7, 2022, 7:00 PM   | Meetup
+      url: https://www.meetup.com/praguerb/events/dkmktfydcqbkb/
+      ical:
+        summary: First Wednesday Of The Month - Ruby
+        description: 'Prague.rb / CSRUG
+
+          Wednesday, December 7 at 7:00 PM
+
+
+          https://www.meetup.com/praguerb/events/dkmktfydcqbkb/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_dkmktfydcqbkb@meetup.com
+        url: https://www.meetup.com/praguerb/events/dkmktfydcqbkb/
+        dtstart: 2022-12-07 19:00:00+01:00
+        dtend: 2022-12-07 22:00:00+01:00
