--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -8355,3 +8355,79 @@ series:
         url: https://www.meetup.com/typedb-prague/events/286877450/
         dtstart: 2022-07-13 18:30:00+02:00
         dtend: 2022-07-13 19:30:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, Aug 16, 6:30 PM  CEST: **Talk Summary**
+
+        Applications running on production have much higher requirements. Not only do they need to be correct, they also need to be "always-on", handle a much bigg'
+      og_title: Building a Distributed Database With the Raft Replication Algorithm, Tue, Aug 16, 2022, 6:30 PM   | Meetup
+      url: https://www.meetup.com/typedb-prague/events/287612662/
+      ical:
+        summary: Building a Distributed Database With the Raft Replication Algorithm
+        description: 'TypeDB Prague Engineers
+
+          Tuesday, August 16 at 6:30 PM
+
+
+          **Talk Summary**Applications running on production have much higher requirements. Not only do they need to be correct, they also need to be "always-on...
+
+
+          https://www.meetup.com/typedb-prague/events/287612662/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287612662@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/287612662/
+        dtstart: 2022-08-16 18:30:00+02:00
+        dtend: 2022-08-16 19:30:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Aug 18, 6:30 PM  CEST: **Talk Summary**
+
+        Computational biology has revolutionised biomedicine. The volume of data it is generating is growing exponentially. This requires tools that enable computa'
+      og_title: Enabling the Computational Future of Biology, Thu, Aug 18, 2022, 6:30 PM   | Meetup
+      url: https://www.meetup.com/typedb-prague/events/287612812/
+      ical:
+        summary: Enabling the Computational Future of Biology
+        description: 'TypeDB Prague Engineers
+
+          Thursday, August 18 at 6:30 PM
+
+
+          **Talk Summary**Computational biology has revolutionised biomedicine. The volume of data it is generating is growing exponentially. This requires tool...
+
+
+          https://www.meetup.com/typedb-prague/events/287612812/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287612812@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/287612812/
+        dtstart: 2022-08-18 18:30:00+02:00
+        dtend: 2022-08-18 19:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Introduction to TypeDB and TypeQL | A Strongly-Typed Database
+        description: 'TypeDB Prague Engineers
+
+          Wednesday, July 13 at 6:30 PM
+
+
+          TypeDB is a strongly-typed database. It provides a rich and logical type system which breaks down complex problems into meaningful and logical systems...
+
+
+          https://www.meetup.com/typedb-prague/events/286877450/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286877450@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/286877450/
+        dtstart: 2022-07-13 18:30:00+02:00
+        dtend: 2022-07-13 19:30:00+02:00
