--- a/data/sources/productboard.yaml
+++ b/data/sources/productboard.yaml
@@ -11123,3 +11123,54 @@ series:
         url: https://www.meetup.com/productboard-meetups/events/286180415/
         dtstart: 2022-06-15 18:00:00+02:00
         dtend: 2022-06-15 21:00:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Aug 11, 6:00 PM  CEST: Our first-ever Product Meetup is here!
+
+
+        Get inspired by people who have stepped up, found their voice, and propelled their careers in leadership roles in the software engin'
+      og_title: Product Meetup, Thu, Aug 11, 2022, 6:00 PM   | Meetup
+      url: https://www.meetup.com/productboard-meetups/events/287636278/
+      ical:
+        summary: Product Meetup
+        description: 'Productboard Meetups
+
+          Thursday, August 11 at 6:00 PM
+
+
+          Our first-ever Product Meetup is here! Get inspired by people who have stepped up, found their voice, and propelled their careers in leadership roles ...
+
+
+          https://www.meetup.com/productboard-meetups/events/287636278/'
+        location: Productboard (Boudníkova 2506/3, Praha 8-Libeň, Czech Republic 180 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287636278@meetup.com
+        url: https://www.meetup.com/productboard-meetups/events/287636278/
+        dtstart: 2022-08-11 18:00:00+02:00
+        dtend: 2022-08-11 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Leadership Meetup - The Importance of Product Strategy
+        description: 'Productboard Meetups
+
+          Thursday, July 28 at 5:30 PM
+
+
+          🚨 Leadership Meetup at Productboard is back! Join industry leaders and find out how they think about product strategy. Get inspired by people who have...
+
+
+          https://www.meetup.com/productboard-meetups/events/287300347/'
+        location: Productboard (Boudníkova 2506/3, Praha 8-Libeň, Czech Republic 180 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287300347@meetup.com
+        url: https://www.meetup.com/productboard-meetups/events/287300347/
+        dtstart: 2022-07-28 17:30:00+02:00
+        dtend: 2022-07-28 20:30:00+02:00
