data: cron update

--- a/data/sources/applifting-meetup.yaml
+++ b/data/sources/applifting-meetup.yaml
@@ -16958,3 +16958,99 @@ series:
         url: https://www.meetup.com/applifting-meetup-1/events/283625028/
         dtstart: 2022-02-15 18:30:00+01:00
         dtend: 2022-02-15 20:30:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'UX/UI Crew Talk: Design from different perspectives'
+        description: 'Applifting Crew Talk
+
+          Tuesday, May 31 at 6:00 PM
+
+
+          Are you a fan of high-quality and comprehensible design? Do you want to talk about it with other enthusiasts and learn something new and interesting? ...
+
+
+          https://www.meetup.com/applifting-meetup-1/events/285739735/'
+        location: Applifting Meetup Space (Rohanské nábřeží, 670/19, Praha, AL\, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285739735@meetup.com
+        url: https://www.meetup.com/applifting-meetup-1/events/285739735/
+        dtstart: 2022-05-31 18:00:00+02:00
+        dtend: 2022-05-31 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'iOS Crew Talk: How juniors become seniors and other secrets of iOS team mgmt'
+        description: 'Applifting Crew Talk
+
+          Tuesday, April 12 at 6:00 PM
+
+
+          Does your heart beat to the rhythm of iOS? Then don''t miss our next Crew Talk.  You can look forward to a panel discussion of three iOS experts: Micha...
+
+
+          https://www.meetup.com/applifting-meetup-1/events/284781337/'
+        location: Applifting Meetup Space (Rohanské nábřeží, 670/19, Praha, AL\, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_284781337@meetup.com
+        url: https://www.meetup.com/applifting-meetup-1/events/284781337/
+        dtstart: 2022-04-12 18:00:00+02:00
+        dtend: 2022-04-12 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'FE Crew Talk: The Present and Future of the Modern Web'
+        description: 'Applifting Crew Talk
+
+          Tuesday, February 22 at 6:00 PM
+
+
+          💡 Interested in everything about the modern web? Do you want to know what criteria it should meet and what tools can help you with that? Then don''t mi...
+
+
+          https://www.meetup.com/applifting-meetup-1/events/283681829/'
+        location: Applifting Meetup Space (Rohanské nábřeží, 670/19, Praha, AL\, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_283681829@meetup.com
+        url: https://www.meetup.com/applifting-meetup-1/events/283681829/
+        dtstart: 2022-02-22 18:00:00+01:00
+        dtend: 2022-02-22 20:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Product Crew Talk: Can your idea become a success?'
+        description: 'Applifting Crew Talk
+
+          Tuesday, February 15 at 6:30 PM
+
+
+          💡 Do you have an idea for a business but don''t know how to ensure its validity and viability? Want to make sure it has a chance of success? Wondering ...
+
+
+          https://www.meetup.com/applifting-meetup-1/events/283625028/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_283625028@meetup.com
+        url: https://www.meetup.com/applifting-meetup-1/events/283625028/
+        dtstart: 2022-02-15 18:30:00+01:00
+        dtend: 2022-02-15 20:30:00+01:00
