--- a/data/sources/productboard.yaml
+++ b/data/sources/productboard.yaml
@@ -11582,3 +11582,29 @@ series:
         url: https://www.meetup.com/productboard-meetups/events/287300347/
         dtstart: 2022-07-28 17:30:00+02:00
         dtend: 2022-07-28 20:30:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Aug 17, 6:00 PM  CEST: Productboard has been quietly growing our Brno presence for the last few months and we really enjoyed meeting the tech community.
+
+        We want to continue organizing opportuniti'
+      og_title: Tech Community Summer Gathering, Wed, Aug 17, 2022, 6:00 PM   | Meetup
+      url: https://www.meetup.com/productboard-meetups/events/287756409/
+      ical:
+        summary: Tech Community Summer Gathering
+        description: 'Productboard Meetups
+
+          Wednesday, August 17 at 6:00 PM
+
+
+          Productboard has been quietly growing our Brno presence for the last few months and we really enjoyed meeting the tech community.We want to continue o...
+
+
+          https://www.meetup.com/productboard-meetups/events/287756409/'
+        location: Impact Hub Brno (Cyrilská 7, Brno-střed-Trnitá, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287756409@meetup.com
+        url: https://www.meetup.com/productboard-meetups/events/287756409/
+        dtstart: 2022-08-17 18:00:00+02:00
+        dtend: 2022-08-17 21:00:00+02:00
