--- a/data/sources/productboard.yaml
+++ b/data/sources/productboard.yaml
@@ -11124,12 +11124,9 @@ series:
         dtstart: 2022-06-15 18:00:00+02:00
         dtend: 2022-06-15 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Aug 11, 6:00 PM  CEST: Our first-ever Product Meetup is here!
-
-
-        Get inspired by people who have stepped up, found their voice, and propelled their careers in leadership roles in the software engin'
-      og_title: Product Meetup, Thu, Aug 11, 2022, 6:00 PM   | Meetup
-      url: https://www.meetup.com/productboard-meetups/events/287636278/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Product Meetup
         description: 'Productboard Meetups
