data: cron update

--- a/data/sources/ruby-praha.yaml
+++ b/data/sources/ruby-praha.yaml
@@ -2849,9 +2849,9 @@ series:
         dtstart: 2022-07-06 19:00:00+02:00
         dtend: 2022-07-06 22:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Aug 3, 7:00 PM  CEST: '
-      og_title: First Wednesday Of The Month - Ruby, Wed, Aug 3, 2022, 7:00 PM   | Meetup
-      url: https://www.meetup.com/praguerb/events/dkmktfydclbfb/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: First Wednesday Of The Month - Ruby
         description: 'Prague.rb / CSRUG
@@ -2859,14 +2859,14 @@ series:
           Wednesday, August 3 at 7:00 PM
 
 
-          https://www.meetup.com/Praguerb/events/dkmktfydclbfb/'
+          https://www.meetup.com/praguerb/events/287188515/'
         location: null
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_dkmktfydclbfb@meetup.com
-        url: https://www.meetup.com/Praguerb/events/dkmktfydclbfb/
+        url: https://www.meetup.com/praguerb/events/287188515/
         dtstart: 2022-08-03 19:00:00+02:00
         dtend: 2022-08-03 22:00:00+02:00
   - meetupcom:
