--- a/data/sources/productboard.yaml
+++ b/data/sources/productboard.yaml
@@ -11869,3 +11869,27 @@ series:
         url: https://www.meetup.com/productboard-meetups/events/287636278/
         dtstart: 2022-08-11 18:00:00+02:00
         dtend: 2022-08-11 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Product Meetup
+        description: 'Productboard Meetups
+
+          Thursday, August 11 at 6:00 PM
+
+
+          Our first-ever Product Meetup is here! Get inspired by people who have stepped up, found their voice, and propelled their careers in leadership roles ...
+
+
+          https://www.meetup.com/productboard-meetups/events/287636278/'
+        location: Productboard (Boudníkova 2506/3, Praha 8-Libeň, Czech Republic 180 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287636278@meetup.com
+        url: https://www.meetup.com/productboard-meetups/events/287636278/
+        dtstart: 2022-08-11 18:00:00+02:00
+        dtend: 2022-08-11 21:00:00+02:00
